# tkawen-com

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
assets/: indexnow-key.txt  llms-full.txt  llms.txt  manifest.webmanifest  robots.txt  service-worker.js  sitemap.xml  styles.css
assets/brand/: tokens-colors.css
deploy-package/: README.md  build-source-tarball.ps1  install.sh
deploy-package/nginx/: new.tkawen.com.conf
deploy-package/systemd/: tkawen-com.service
sales-pack/: README.md
sales-pack/campaign-mystoq/: .gitignore  README.md
sales-pack/campaign-mystoq/architecture/: migration-to-tkawen-subdomains.md  nginx-tkawen-reactor.conf  nuclear-reactor.md
sales-pack/campaign-mystoq/blog/: best-shipping-companies-dz-2026.php  edahabia-vs-cib-2026.php  index.php  (+1 more)
sales-pack/email/: enterprise_bank_intro.md  enterprise_ministry_intro.md  enterprise_university_intro.md
sales-pack/social/: hn_show_post.md  linkedin_launch.md  producthunt_launch.md  reddit_dz_post.md
sales-pack/trackers/: daily_routine.md  leads.csv
sales-pack/whatsapp/: 01_pharmapro_cold.md  02_pharmapro_warm.md  03_pharmapro_followup.md  04_pharmapro_objection_price.md  05_pharmapro_close.md  06_mystoq_cold.md  07_mystoq_warm.md  08_mystoq_followup.md  09_mystoq_objection_existing.md  10_mystoq_close.md  11_certify_cold.md  12_certify_warm.md  13_certify_followup.md  14_certify_objection_paper.md  15_certify_close.md
src/: content.rs  main.rs  schemas.rs  templates.rs
(+65 files in other folders)
